# product-catalogue

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dnsmasq.conf  docker-compose.yml  fly.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: Dev-Env-Dockerfile  docker-compose.yaml
.github/workflows/: rust-clippy.yml  rust.yml
backend/: Dockerfile
docker/: DNS-Dockerfile  Dockerfile  docker-compose.yaml  docker-compose.yml
infrastructure/aws/: config.tf  graphql_lambda.tf  lambda_graphql.tf  lambda_retrieve_inventory.tf  lambda_retrieve_product.tf  lambda_store_inventory.tf  lambda_store_product.tf  storage.tf  terraform.tfvars  variables.tf
infrastructure/fly/: Dockerfile.GraphQL  fly.toml
libraries/core/: Cargo.toml
libraries/core/src/: config.rs  database.rs  lib.rs  macros.rs  model.rs  types.rs
libraries/core/src/database/: dynamodb.rs  store.rs
libraries/core/src/database/dynamodb/: retrieve.rs  store.rs
libraries/core/src/model/: inventory.rs  inventory_search.rs  product.rs  product_search.rs
libraries/core/src/types/: config.rs  custom_value.rs
libraries/dto/: Cargo.toml
libraries/dto/src/: lib.rs
middleware/graphql/: Cargo.toml  README.md
middleware/graphql/src/: schema.rs
middleware/graphql/src/schema/: price.rs  product.rs
services/retrieve_dto/: Cargo.toml
services/retrieve_dto/src/: lib.rs
services/store_dto/: Cargo.toml
services/store_dto/src/: lib.rs
services/store_product/: Cargo.toml
services/store_product/src/: lib.rs
