[package]
name = "core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
aws-types = "1.1.1"
once_cell = "1"
