[package]
name = "product_catalogue_graphql"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../../libraries/core" }

actix-web = "4.2"
actix-web-lab = "0.19"
actix-cors = "0.6"
dotenv = "0.15"
env_logger = "0.10.0"
futures = "0.3"
juniper = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
log = "0.4"
lambda_http = "0.7"
lambda_runtime = "0.7"

reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
