[package]
name = "retrieve_dto"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.6.1"
log = "0.4"
tokio = { version = "1", features = ["macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

env_logger = "0.9"

actix-web = "4.1"
actix-web-lab = "0.18.2"
actix-cors = "0.6"

core = { path = "../../libraries/core" }
