[package]
name = "store_dto"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.7"
http = "0.2"
log = "0.4"
tokio = { version = "1", features = ["macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"

env_logger = "0.10.0"

actix-web = "4"
actix-web-lab = "0.18"
actix-cors = "0.6"

core = { path = "../../libraries/core" }
