[package]
name = "store_product"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.5.1"
log = "^0.4.14"
tokio = { version = "1", features = ["macros"] }
serde_json = "^1.0.68"
env_logger = "0.9.0"

core = { path = "../../libraries/core" }
