[package]
name = "store_product"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.5.1"
log = "^0.4.14"
tokio = { version = "1", features = ["macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "^1.0.68"
serde_derive = "^1.0.130"

env_logger = "0.9.0"

actix-web = "4.1.0"
actix-web-lab = "0.10"
actix-cors = "0.6"

core = { path = "../../libraries/core" }

once_cell = "1.13.1"